--- a/style.css
+++ b/style.css
@@ -36,5 +36,17 @@ button{
    width: 80px;
    height: 60px;
    margin: 10px;
-   border-radius: 5px;
+   border-radius: 10px;
+   cursor: pointer;
+}
+.equal{
+
+    box-sizing:border-box;
+    background-color: orange;
+    color: aliceblue;
+    
+
+}
+.operator{
+    color: aqua;
 }
